--- a/style.css
+++ b/style.css
@@ -1,37 +1,3 @@
-body {
-    background-color: blueviolet;
-color: brown;
-}
-    
-p {
-
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: cadetblue;
-    padding: 20px;
-    border-radius: 40px;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-h1 {
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-h3 {
-    background-color: beige;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    font-style: italic;
-    text-decoration: underline;
-    padding: 20px;
-    border-radius: 40px;
-    width: fit-content;
-    margin-left: 400px;
-    margin-right: 400px;
-}
-button {
-    color: black;
-    background-color: antiquewhite;
-}
-img {
-    padding: 20px;
+body{
+    background-color:darkslategrey
 }
