--- a/webbhistoria/historia.css
+++ b/webbhistoria/historia.css
@@ -1,3 +1,15 @@
 body{
-    background-color:tomato
+    background-color:rgb(84, 62, 60)
+    
+    
+    
 }
+
+
+div{
+    color: aliceblue;
+    width: 50%;
+    padding: 5px;
+}
+
+
