Allt länkat till en sida

--- a/Main/Spel/spel.css
+++ b/Main/Spel/spel.css
@@ -14,10 +14,17 @@ body {
     background-color: transparent;
     text-decoration: none;
 }
+.button{
+  border: none;
+  color: rgb(131, 131, 131);
+  text-decoration: none;
+  background-color: transparent;
+  font-size: larger;
+}
 .bio{
     
     position: absolute;
-    top: 45%;
+    top: 55%;
     left: 41%;
     display: grid;
     grid-template-columns: auto auto auto;
