--- a/Main/style.css
+++ b/Main/style.css
@@ -1,35 +1,95 @@
-
-  a {
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: none;
-  }
-  
-  a {
-    text-decoration: none;
-    position: relative;
-  }
-  
-  a:after {
-    border-radius: 1em;
-    border-top: .1em solid rgb(131, 131, 131);
-    content: "";
-    position: relative;
-      right: 100%;
-      bottom: .14em;
-      left: 0;
-    transition: right .4s cubic-bezier(0,.5,0,1);
-  }
-  
-  a:hover:after {
-    right: 0;
-  }
-
-
-body{
-    background-color:rgb(153, 189, 189)
-    
+.center {
+  margin: 0;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
+.länkar {
+  margin: 0;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  height: 20px;
+
+
+}
+
+a:link {
+  color: cornsilk;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: rgb(131, 131, 131);
+  background-color: transparent;
+  text-decoration: none;
+  border-top: .1em solid rgb(131, 131, 131);
+}
+
+.bio {
+  position: absolute;
+  top: 25%;
+  left: 42%;
+  display: grid;
+  grid-template-columns: auto auto auto;
+
+  padding: 10px;
+}
+
+.grid-item {
+
+  border: 4px solid cornsilk;
+  padding: 20px;
+  font-size: 25px;
+
+}
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a:hover {
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a {
+  text-decoration: none;
+  position: relative;
+  background-color: transparent;
+}
+
+a:after {
+  border-radius: 1em;
+  border-top: .1em solid rgb(131, 131, 131);
+  content: "";
+  position: relative;
+  right: 100%;
+  bottom: .14em;
+  left: 0;
+  transition: right .4s cubic-bezier(0, .5, 0, 1);
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a:hover:after {
+  right: 0;
+}
+
+.ett {
+  border: 3px solid cornsilk;
+  text-decoration: none;
+  background-color: transparent;
+  color: rgb(131, 131, 131);
+}
+
+body {
+  background-color: rgb(153, 189, 189)
+}
