--- a/Main/Blogg/blogg1.css
+++ b/Main/Blogg/blogg1.css
@@ -62,7 +62,7 @@ body {
     border-radius: 70px;
     margin-left: 230px;
     display: flex;
-    margin-top: -280px;
+    margin-top: -544px;
   }
 
   .sida{
@@ -72,4 +72,11 @@ body {
     color: darkslategray;
 
   }
-  
+  .sida2{
+    text-decoration:underline;
+    font-size: larger;
+    font-family: cursive;
+    color: darkslategray;
+    display: flex;
+    margin-top: -350px;
+  }
